# notoriety

./: Cargo.toml  LICENSE  README.md  publish
src/: backend.rs  editor.rs  lib.rs  note_api.rs
tests/: ui-tests.rs
