[package]
name = "notoriety-cli"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Encrypted note-taking application with cloud sharing"
homepage = "https://github.com/dmgolembiowski/notoriety"
repository = "https://github.com/dmgolembiowski/notoriety"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "text-editors", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "no"
path = "src/bin/notoriety-cli.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
