[package]
name = "notoriety-cli"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Encrypted note-taking application with cloud sharing"
homepage = "https://github.com/dmgolembiowski/notoriety"
repository = "https://github.com/dmgolembiowski/notoriety"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "text-editors", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "no"
path = "src/bin/notoriety-cli.rs"

[dependencies]
anyhow = "1"
argon2 = { version = "0.5.2", features = ["std"] }
bonsaidb = { version = "0.5.0", features = ["local-full", "files", "password-hashing", "token-authentication", "encryption"] }
bonsaidb-files = "0.1.0"
bonsaidb-local = "0.5.0"
clap = { version = "4", features = ["derive"] }
ctor = "0.2.5"
homedir = "0.2.1"
kiro-editor = "0.4.3"
lazy_static = "1.4.0"

[dev-dependencies]
rstest = "0.18"

